--- a/name.html
+++ b/name.html
@@ -3,14 +3,14 @@
 <head>
 <title>ประวัติส่วนตัว😊</title>
 <body>
-<h1><marquee>ยินดีต้อนรับเข้าสู่ประวัติส่วนตัว❤❤</marquee></h1>
+<h1><marquee>ยินดีต้อนรับเข้าสู่ประวัติส่วนตัว🎨🎈</marquee></h1>
   <center>
-    <font style="color:yellow">ชื่อ : เด็กชายณัฐนันท์ ประเสริฐนิยม ห้องเกท ม.202 เลขที่ 15</font><br>
-    <font style="color:blue"> ปัจจุบันเรียนโรงเรียน : สวนกุหลาบวิทยาลัย</font><br>
-    <font style="color:red">เกิด : 5 กันยายน 2554 อายุ 13 ปี</font><br>
-    <font style="color:purple">ผลไม้ที่ชอบ : แตงโม🍉</font><br>
-    <font style="color:green">เครื่องดื่มที่ชอบ : มัทฉะลาเต้🍵</font><br>
-    <font style="color:pink">ข้อมูลติดต่อ : IG :tuntunsk_148🤩</font><br>
+    <font style="color:brown">ชื่อ : เด็กชายณัฐนันท์ ประเสริฐนิยม ห้องเกท ม.202 เลขที่ 15</font><br><br>
+    <font style="color:blue"> ปัจจุบันเรียนโรงเรียน : สวนกุหลาบวิทยาลัย</font><br><br>
+    <font style="color:red">เกิด : 5 กันยายน 2554 อายุ 13 ปี</font><br><br>
+    <font style="color:purple">ผลไม้ที่ชอบ : แตงโม🍉</font><br><br>
+    <font style="color:green">เครื่องดื่มที่ชอบ : มัทฉะลาเต้🍵</font><br><br>
+    <font style="color:pink">ข้อมูลติดต่อ : IG :tuntunsk_148🤩</font><br><br>
 </center>
 </body>
 </head>
