--- a/name.html
+++ b/name.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8"
 <head>
 <title>ประวัติส่วนตัว😊</title>
-<body>
+<body bgcolor="#00CCCC">
 <h1><marquee>ยินดีต้อนรับเข้าสู่ประวัติส่วนตัว🎨🎈</marquee></h1>
   <center>
     <font style="color:brown">ชื่อ : เด็กชายณัฐนันท์ ประเสริฐนิยม ห้องเกท ม.202 เลขที่ 15</font><br><br>
