--- a/queen.html
+++ b/queen.html
@@ -28,9 +28,10 @@
       <br><br>
       <img src="https://image.bangkokbiznews.com/image/kt/media/image/fileupload1/source/159109769672.jpg?1591097699215" height=400>
       <br><br>
-      <u>ทรงเป็นผู้บังคับบัญชาหน่วยราชการในพระองค์</u>
+      <u>ทรงเป็นผู้บังคับบัญชาหน่วยราชการในพระองค์</u><br>
       พระบาทสมเด็จพระวชิรเกล้าเจ้าอยู่หัว มีพระบรมราชโองการ โปรดเกล้าโปรดกระหม่อมการบังคับบัญชาหน่วยราชการในพระองค์ ข้าราชการและข้าราชบริพารในกรมกิจการในพระบรมวงศานุวงศ์ ขึ้นตรงกับ สมเด็จพระนางเจ้าสุทิดา พัชรสุธาพิมลลักษณ พระบรมราชินี ตั้งแต่วันที่ 10 มิถุนายน พ.ศ. 2562 เป็นต้นไป 
-      โดยพระองค์เป็นผู้บังคับบัญชาและรับผิดชอบการปฏิบัติราชการ ดังนี้ กองราชเลขานุการในพระองค์สมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถ พระบรมราชชนนีพันปีหลวงกองราชสำนักสมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถ พระบรมราชชนนีพันปีหลวงกองศิลปาชีพสถาบันสิริกิติ์มูลนิธิส่งเสริมศิลปาชีพในสมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถนางสนองพระโอษฐ์และคุณข้าหลวงในพระองค์สมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถ พระบรมราชชนนีพันปีหลวง
+      โดยพระองค์เป็นผู้บังคับบัญชาและรับผิดชอบการปฏิบัติราชการ ดังนี้ กองราชเลขานุการในพระองค์สมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถ พระบรมราชชนนีพันปีหลวงกองราชสำนักสมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถ พระบรมราชชนนีพันปีหลวง
+      กองศิลปาชีพสถาบันสิริกิติ์มูลนิธิส่งเสริมศิลปาชีพในสมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถนางสนองพระโอษฐ์และคุณข้าหลวงในพระองค์สมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถ พระบรมราชชนนีพันปีหลวง
       <br><br>
        </center>
   </body>
