--- a/queen.html
+++ b/queen.html
@@ -26,7 +26,7 @@
       ย้อนกลับไปในวันที่ 7 ธันวาคม พ.ศ. 2557 สมเด็จพระนางเจ้าสุทิดาฯ (ในเวลานั้นคือพลเอกหญิงสุทิดา วชิราลงกรณ์) ได้โดยเสด็จพระบาทสมเด็จพระเจ้าอยู่หัว ขณะดำรงพระอิสริยยศเป็นสมเด็จพระบรมโอรสาธิราชฯ สยามมกุฎราชกุมาร 
       ในพิธีพระราชทานธงชัยเฉลิมพลวันที่ 22 กุมภาพันธ์ พ.ศ. 2559 ได้ตามเสด็จในพิธีสังเวยพระป้ายในเทศกาลตรุษจีน ณ พระที่นั่งอัมพรสถานฯ และปรากฏตัวอีกครั้งในวันประสูติพระเจ้าหลานเธอ พระองค์เจ้าทีปังกรรัศมีโชติ ในปีเดียวกัน
       <br><br>
-      <img src="https://image.bangkokbiznews.com/image/kt/media/image/fileupload1/source/159109769672.jpg?1591097699215" height=400>
+      <img src="https://image.bangkokbiznews.com/image/kt/media/image/fileupload1/source/159109769672.jpg?1591097699215" width=200 height=400>
       <br><br>
       <u>ทรงเป็นผู้บังคับบัญชาหน่วยราชการในพระองค์</u><br>
       พระบาทสมเด็จพระวชิรเกล้าเจ้าอยู่หัว มีพระบรมราชโองการ โปรดเกล้าโปรดกระหม่อมการบังคับบัญชาหน่วยราชการในพระองค์ ข้าราชการและข้าราชบริพารในกรมกิจการในพระบรมวงศานุวงศ์ ขึ้นตรงกับ สมเด็จพระนางเจ้าสุทิดา พัชรสุธาพิมลลักษณ พระบรมราชินี ตั้งแต่วันที่ 10 มิถุนายน พ.ศ. 2562 เป็นต้นไป 
