--- a/queen.html
+++ b/queen.html
@@ -20,13 +20,13 @@
       ต่อมาทรงเข้ารับราชการทหารในหน่วยบัญชาการถวายความปลอดภัยรักษาพระองค์ ทรงดำรงตำแหน่งสูงสุด เป็นรองผู้บัญชาการหน่วยบัญชาการถวายความปลอดภัยรักษาพระองค์ (อัตรา พลเอกพิเศษ) ทั้งยังทรงได้รับพระมหากรุณาธิคุณจากพระบาทสมเด็จพระวชิรเกล้าเจ้าอยู่หัว เมื่อครั้งดำรงพระอิสริยยศ 
         สมเด็จพระเจ้าอยู่หัวมหาวชิราลงกรณ บดินทรเทพยวรางกูร ให้ทรงดำรงตำแหน่งเป็นราชองครักษ์เวรในพระองค์และพระบรมวงศานุวงศ์หลายพระองค์
       <br><br>
-      <img src="https://media.thaigov.go.th/uploads/images/131/2024/11/jpg/IMG_20241125091225000000.jpg" height=400>
+      <img src="https://media.thaigov.go.th/uploads/images/131/2024/11/jpg/IMG_20241125091225000000.jpg" width=300 height=400>
       <br><br>
       <u>การปฏิบัติหน้าที่ในราชการทหาร</u><br>
       ย้อนกลับไปในวันที่ 7 ธันวาคม พ.ศ. 2557 สมเด็จพระนางเจ้าสุทิดาฯ (ในเวลานั้นคือพลเอกหญิงสุทิดา วชิราลงกรณ์) ได้โดยเสด็จพระบาทสมเด็จพระเจ้าอยู่หัว ขณะดำรงพระอิสริยยศเป็นสมเด็จพระบรมโอรสาธิราชฯ สยามมกุฎราชกุมาร 
       ในพิธีพระราชทานธงชัยเฉลิมพลวันที่ 22 กุมภาพันธ์ พ.ศ. 2559 ได้ตามเสด็จในพิธีสังเวยพระป้ายในเทศกาลตรุษจีน ณ พระที่นั่งอัมพรสถานฯ และปรากฏตัวอีกครั้งในวันประสูติพระเจ้าหลานเธอ พระองค์เจ้าทีปังกรรัศมีโชติ ในปีเดียวกัน
       <br><br>
-      <img src="https://image.bangkokbiznews.com/image/kt/media/image/fileupload1/source/159109769672.jpg?1591097699215" width=200 height=400>
+      <img src="https://image.bangkokbiznews.com/image/kt/media/image/fileupload1/source/159109769672.jpg?1591097699215"  height=400>
       <br><br>
       <u>ทรงเป็นผู้บังคับบัญชาหน่วยราชการในพระองค์</u><br>
       พระบาทสมเด็จพระวชิรเกล้าเจ้าอยู่หัว มีพระบรมราชโองการ โปรดเกล้าโปรดกระหม่อมการบังคับบัญชาหน่วยราชการในพระองค์ ข้าราชการและข้าราชบริพารในกรมกิจการในพระบรมวงศานุวงศ์ ขึ้นตรงกับ สมเด็จพระนางเจ้าสุทิดา พัชรสุธาพิมลลักษณ พระบรมราชินี ตั้งแต่วันที่ 10 มิถุนายน พ.ศ. 2562 เป็นต้นไป 
