Update and rename Teacher.html to teacher.html

--- a/teacher.html
+++ b/teacher.html
@@ -8,7 +8,7 @@
       <h1><marquee onmouseover=stop() onmouseout=start() scrollamouse=5>
         🙋‍♂️ครูในความทรงจำ..ที่ไม่ลืมเลือน 2568 </marquee></h1>
         <br><br>
-        <img src="" width=250 height=250>
+        <img src="pic.jpg" width=250 height=250>
       <br><br>
       <b>ด.ช.ณัฐนันท์ ประเสริฐนิยม ห้อง202 เลขที่ 15</b>
     </center>
