--- a/teacher.html
+++ b/teacher.html
@@ -8,6 +8,16 @@
       <h1><marquee onmouseover=stop() onmouseout=start() scrollamouse=5>
         🙋‍♂️ครูในความทรงจำ..ที่ไม่ลืมเลือน 2568 </marquee></h1>
         <br><br>
+      <img src="" width=250 height=250>
+      <br><br>
+      นายกระมล จันทร์ตรี : ขอบคุณที่สอนวิชาคณิตศาสตร์ เรียนรู้สิ่งต่างๆ
+      <br><br>
+      <b>บทแพลงที่มอบให้ครู</b>
+      <br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xh4nHueL2ok?si=nuhPp3lzRlkZcy_m" title="YouTube video player" frameborder="0" allow="accelerometer; 
+  autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      <br><br>
         <img src="pic.jpg" width=250 height=250>
       <br><br>
       <b>ด.ช.ณัฐนันท์ ประเสริฐนิยม ห้อง202 เลขที่ 15</b>
