--- a/teacher.html
+++ b/teacher.html
@@ -8,7 +8,7 @@
       <h1><marquee onmouseover=stop() onmouseout=start() scrollamouse=5>
         🙋‍♂️ครูในความทรงจำ..ที่ไม่ลืมเลือน 2568 </marquee></h1>
         <br><br>
-      <img src="" width=250 height=250>
+      <img src="https://lh5.googleusercontent.com/xKTHjdrqteDGJGd1L07LkGIjzisHjcJ9xB_RUqJm9ymGMBptXNu5pyrws-aeeJyr_hGlQ6YoXhIAE-vdDAFLHbfbk6qLa66szxQgpkg77ZeneJxsAiC7sKUFBzJoG5T_BpeFSZ0MiLBSlG5oo9eTxNnIJg6IV4nQze_SU1z8w2-Lkw3F9_odRQ=w1280" width=250 height=250>
       <br><br>
       นายกระมล จันทร์ตรี : ขอบคุณที่สอนวิชาคณิตศาสตร์ เรียนรู้สิ่งต่างๆ
       <br><br>
@@ -16,7 +16,6 @@
       <br><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xh4nHueL2ok?si=nuhPp3lzRlkZcy_m" title="YouTube video player" frameborder="0" allow="accelerometer; 
   autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
       <br><br>
         <img src="pic.jpg" width=250 height=250>
       <br><br>
