--- a/teacher.html
+++ b/teacher.html
@@ -10,14 +10,48 @@
         <br><br>
       <img src="https://lh5.googleusercontent.com/xKTHjdrqteDGJGd1L07LkGIjzisHjcJ9xB_RUqJm9ymGMBptXNu5pyrws-aeeJyr_hGlQ6YoXhIAE-vdDAFLHbfbk6qLa66szxQgpkg77ZeneJxsAiC7sKUFBzJoG5T_BpeFSZ0MiLBSlG5oo9eTxNnIJg6IV4nQze_SU1z8w2-Lkw3F9_odRQ=w1280" width=250 height=250>
       <br><br>
-      นายกระมล จันทร์ตรี : ขอบคุณที่สอนวิชาคณิตศาสตร์ เรียนรู้สิ่งต่างๆ
+      นายกระมล จันทร์ตรี : ขอบคุณที่สอนวิชาคณิตศาสตร์ เรียนรู้แต่ละหัวข้อวิชาเลข
       <br><br>
       <b>บทแพลงที่มอบให้ครู</b>
       <br><br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xh4nHueL2ok?si=nuhPp3lzRlkZcy_m" title="YouTube video player" frameborder="0" allow="accelerometer; 
   autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <br><br>
-        <img src="pic.jpg" width=250 height=250>
+      <img src="https://lh3.googleusercontent.com/3oZdbr4qCQ_LNiTxuYoqjWGH4aVajPRZbqxGh3v3ztH4cCMjFPOLY07pgsYKszN543cpuTIn_oF-8JkeLCQneaLNMN6l2F17Y63Svmb47oTgUKGMmlxEeEquJ8jstdjNKSUCtRG09hqg1z9McV8B9U8Ke5HyGVsffQlH4tw9T73I1plyz4nQsw=w1280"width=250 height=250>
+      <br><br>
+      น.ส.มัณฑนา ทับทิม : ขอบคุณที่สอนวิชาสุขศึกษา การบริโภคที่ถูกต้อง
+      <br><br>
+      <b>บทเพลงที่มอบให้ครู</b>
+      <br><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/dhFt7eURm78?si=CsKT3WvPgHbQMdDM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+        clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <br><br>
+      <img src="https://lh4.googleusercontent.com/RvgPzZadoIbUKggnUPdem4MTCzYF-f_5_lnhW8TEeAIV6FB-chY2fUYAlj3JagSk44RVfXWOOJWOY1Pa-2YK1KnUCcriml6Ke0ZE1mXp5MclMCBV4D6tj-jmvHbXcSzIJV2ss80jw7heN80rW1qwvgbV637zn410uXdbjhpF2otRtisE0GfCTg=w1280"width=250 height=250
+        <br><br>
+      นายอนุชา ทานะสินทร์ : ขอบคุณที่คอยห่วงเรื่องการบ้าน
+      <br><br>
+      <b>บทเพลงที่มอบให้ครู</b>
+      <br><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/I-x43W0of70?si=0u8Lv5TaYixMZCUF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+        encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <br><br>
+      <img src="https://lh5.googleusercontent.com/yYmTKPT0JvctEaQivR4BwAQ6CZv0oUmQ6go1k3gYSN5PunjlPpSzA-1wQcmn_bdMxAm7O_P1NGoV3ut_vDDFFrLBwjRwv2PFYgS4LZy8qEEcooMzQ1EsCnNVyrZfYs2x2hUfpLhypX4qE1q5_eFv8w0CUeXBItNUa9QWJq4vPSb-E5BFMvFNHw=w1280"width=250 height=250
+      <br><br>
+      นายณัฐพงศ์  แตงเพ็ชร์ : ขอบคุณที่ให้พัฒนาคะแนนจนผมได้เกรด 4
+      <br><br>
+      <b>บทเพลงที่มอบให้ครู</b>
+      <br><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/3CWJNqyub3o?si=_TYF3NXg904-4L96" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+        encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <br><br>
+      น.ส.จิราภรณ์ กลัดป้อม : ขอบคุณที่คอยอบรมสั่งสอนให้เป็นคนดี
+      <br><br>
+      <b>บทเพลงที่มอบให้ครู</b>
+      <br><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/5u4xTa3LR2U?si=E9vqO4AgaZN96e7U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+        encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <br><br>
+        <img src="pic.jpg" width=350 height=250>
       <br><br>
       <b>ด.ช.ณัฐนันท์ ประเสริฐนิยม ห้อง202 เลขที่ 15</b>
     </center>
