--- a/teacher.html
+++ b/teacher.html
@@ -35,7 +35,7 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/I-x43W0of70?si=0u8Lv5TaYixMZCUF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
         encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <br><br>
-      <img src="https://lh5.googleusercontent.com/yYmTKPT0JvctEaQivR4BwAQ6CZv0oUmQ6go1k3gYSN5PunjlPpSzA-1wQcmn_bdMxAm7O_P1NGoV3ut_vDDFFrLBwjRwv2PFYgS4LZy8qEEcooMzQ1EsCnNVyrZfYs2x2hUfpLhypX4qE1q5_eFv8w0CUeXBItNUa9QWJq4vPSb-E5BFMvFNHw=w1280"width=250 height=250
+      <img src="https://lh5.googleusercontent.com/yYmTKPT0JvctEaQivR4BwAQ6CZv0oUmQ6go1k3gYSN5PunjlPpSzA-1wQcmn_bdMxAm7O_P1NGoV3ut_vDDFFrLBwjRwv2PFYgS4LZy8qEEcooMzQ1EsCnNVyrZfYs2x2hUfpLhypX4qE1q5_eFv8w0CUeXBItNUa9QWJq4vPSb-E5BFMvFNHw=w1280"width=250 height=250>
       <br><br>
       นายณัฐพงศ์  แตงเพ็ชร์ : ขอบคุณที่ให้พัฒนาคะแนนจนผมได้เกรด 4
       <br><br>
@@ -43,6 +43,7 @@
       <br><br>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/3CWJNqyub3o?si=_TYF3NXg904-4L96" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
         encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <img src="https://lh5.googleusercontent.com/mrZkKB0Of5difOMjQhmDLV1cQZNPSB5K--qb7rT0C2IJongLYoeFADbCEerrDWA-zzqTSlTNXP0vpBwY2grAKyzXX7fVQMGZ2Z3oannpcbScaZYT78bip71FP5wG0CqbaKbGYu4AnsqnjzjfuEPVEkhvseHcxmToOsV9pOK9mKajqbqZ8HPSwQ=w1280"width=250 height=250>
       <br><br>
       น.ส.จิราภรณ์ กลัดป้อม : ขอบคุณที่คอยอบรมสั่งสอนให้เป็นคนดี
       <br><br>
