--- a/pu.html
+++ b/pu.html
@@ -5,7 +5,7 @@
   </head>
   <body background="https://media.istockphoto.com/id/1194606249/th/%E0%B9%80%E0%B8%A7%E0%B8%84%E0%B9%80%E0%B8%95%E0%B8%AD%E0%B8%A3%E0%B9%8C/%E0%B8%84%E0%B8%AD%E0%B8%A5%E0%B9%80%E0%B8%A5%E0%B8%81%E0%B8%8A%E0%B8%B1%E0%B8%99%E0%B8%82%E0%B8%AD%E0%B8%87%E0%B9%80%E0%B8%A7%E0%B8%81%E0%B9%80%E0%B8%95%E0%B8%AD%E0%B8%A3%E0%B9%8C%E0%B8%9E%E0%B8%B7%E0%B9%89%E0%B8%99%E0%B8%AB%E0%B8%A5%E0%B8%B1%E0%B8%87%E0%B8%97%E0%B8%AD%E0%B8%87%E0%B8%A5%E0%B8%A7%E0%B8%94%E0%B8%A5%E0%B8%B2%E0%B8%A2%E0%B9%84%E0%B8%97%E0%B8%A2.jpg?s=612x612&w=0&k=20&c=NvUAYtu_sNReK1PGGR5TO8CQlME5poRq7ZvVYDCbVKg=">
    <center>
-    <h1><font style="color:red"></h1>
+    <h1><font style="color:red">วันสุนทรภู่ กวีเอกของโลก </font></h1>
     <br><br>
     <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQH1PeE9J2ZTkOJQXt6sqrHxFkPiiEDomdnRuERSdWzN3vOFr3WqBIU7GRpQnd9aLB3oy4yyCTyrFuQa8QwSZHI0Q"width=250 height=250>
     <br><br>
@@ -13,6 +13,18 @@
        <br><br>
     สุนทรภู่เป็นกระฏุมพีผู้ดีมีมีมิตรชาวบางกอก เกิดในวังหลัง ปากคลองบางกอกน้อย) เมื่อวันที่ 26 มิถุนายน พ.ศ.2329 ยุค ต้นแผ่นดินรัชกาลที่ 1 เมื่อเติบโตขึ้นเข้ารับราชการในวังหลวง เป็นนักปราชญ์ราชบัณฑิตประจำราชสำนักรัชกาลที่ 2 ต่อมาได้ ออกบวชในรัชกาลที่ 3 อยู่วัดเทพธิดาราม นานถึง 18 ปี (พ.ศ.2367-2385 อายุ 38-56 ปี) แล้วลาสึกมารับราชการในวังหน้ากับสมเด็จพระปิ่นเกล้าฯ (แต่อาศัยอยู่พระราชวังเดิม ธนบุรี) จนถึงแก่กรรมในรัชกาลที่ 4 เมื่อ พ.ศ. 2398 อายุ 69 ปี
 <br><br>
+      <center>
+        <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/Y09YfyNL884?si=klSD8K05q9lzeGir" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+      </center>
+       <br><br>
+       <font style="color black"><u>ผลงานทั้งหมดของสุนทรภู่ (ตามที่มีหลักฐานปรากฏ)</u>
+         <br><br>
+         <li>นิราศ -นิราศเมืองแกลง, นิราศพระบาท, นิราศภูเขาทอง, นิราศสุพรรณ, นิราศวัดเจ้าฟ้า, นิราศอิเหนา, รำพันพิลาป, นิราศพระประธม และนิราศเมืองเพชร</li>
+<li>นิทานกลอน - โคบุตร, พระอภัยมณี, พระไชยสุริยา, ลักษณวงศ์ และสิงหไกรภพ</li>
+<li>สุภาษิต - สวัสดิรักษา และเพลงยาวถวายโอวาท</li>
+<li>บทละคร - อภัยนุราช</li>
+<li>บทเสภา - ขุนช้างขุนแผน และเสภาพระราชพงศาวดาร</li>
+<li>บทเห่กล่อมพระบรรทม -เห่เรื่องพระอภัยมณี, เห่เรื่องโคบุตร, เห่เรื่องจับระบำ และเห่เรื่องกากี</li>
   </center>
   </body>
 </html>
