--- a/pu.html
+++ b/pu.html
@@ -27,14 +27,16 @@
 <li>บทเห่กล่อมพระบรรทม -เห่เรื่องพระอภัยมณี, เห่เรื่องโคบุตร, เห่เรื่องจับระบำ และเห่เรื่องกากี</li>
          <br><br>
          <center>
-           <img src="https://static.naewna.com/uploads/files2017/images/10491374_303172669849782_8151055075491391668_o.jpg">
+           <img src="https://static.naewna.com/uploads/files2017/images/10491374_303172669849782_8151055075491391668_o.jpg"width=250 height=250>
            <br><br>
            <font style="color:green"><u>ความสำคัญ และผลงานของสุนทรภู่🎇🎆</u>
              <br><br>
              ผลงานสุนทรภู่ที่หลายคนรู้จักกันดีคือ "พระอภัยมณี" ซึ่งได้รับการยกย่องจากวรรณคดีสโมสรให้เป็นสุดยอดวรรณคดีไทยประเภทกลอนนิทาน และยังถูกนำไปแปลเป็นภาษาต่างประเทศอีกด้วย โดยใน พ.ศ. 2529 เป็นปีครบรอบวันเกิด 200 ปีของสุนทรภู่ ทางองค์การยูเนสโก (UNESCO) ได้ประกาศให้สุนทรภู่เป็น "บุคคลสำคัญของโลกทางด้านวรรณกรรม" ทำให้มีการจัดตั้งสถาบันสุนทรภู่เพื่อเผยแพร่ชีวิตและผลงานต่างๆ ให้คนรุ่นหลังได้ศึกษากัน
          <br><br>
-             
+             <center>
+               <img src="https://inwfile.com/s-fq/942z30.jpg"width=250 height=250><iframe width="560" height="315" src="https://www.youtube.com/embed/3qoB4HGq6lw?si=pU6GA8AQpDh1rxmJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
          </center>
+             <br><br>
   </center>
   </body>
 </html>
