--- a/pu.html
+++ b/pu.html
@@ -17,7 +17,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Y09YfyNL884?si=klSD8K05q9lzeGir" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </center>
        <br><br>
-       <font style="color black"><u>ผลงานทั้งหมดของสุนทรภู่ (ตามที่มีหลักฐานปรากฏ)</u>
+       <font style="color:black"><u>ผลงานทั้งหมดของสุนทรภู่ (ตามที่มีหลักฐานปรากฏ)</u>
          <br><br>
          <li>นิราศ -นิราศเมืองแกลง, นิราศพระบาท, นิราศภูเขาทอง, นิราศสุพรรณ, นิราศวัดเจ้าฟ้า, นิราศอิเหนา, รำพันพิลาป, นิราศพระประธม และนิราศเมืองเพชร</li>
 <li>นิทานกลอน - โคบุตร, พระอภัยมณี, พระไชยสุริยา, ลักษณวงศ์ และสิงหไกรภพ</li>
@@ -37,6 +37,14 @@
                <img src="https://inwfile.com/s-fq/942z30.jpg"width=250 height=250><iframe width="560" height="315" src="https://www.youtube.com/embed/3qoB4HGq6lw?si=pU6GA8AQpDh1rxmJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
          </center>
              <br><br>
+             <font style="color:purple"><u>บทละครสอนใจ🎵 ตอน พระฤาษีสอนสุดสาคร</u>
+               <br><br>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/-QOlbJcf-nM?si=eBI-LGNcZiIxisSB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+               <br><br>
+               หลังจากสุดสาครถูกชีเปลือยผลักตกหน้าผา แย่งเอาม้านิลมังกรและไม้เท้ากายสิทธิ์ไป พระฤาษีก็ตามมาช่วยได้ทันจึงได้กล่าวสอนสุดสาคร
+กลอนนี้สอนเรื่อง : ให้รู้จักระมัดระวังรอบคอบ รู้จักรักษาตัวให้พ้นจากภัยอันตราย เราไม่รู้เลยว่าใครคิดอย่างไรกับเรา การเรียนรู้ที่จะรับมือและเอาตัวรอดจึงเป็นสิ่งสำคัญ
+               <br><br>
+               
   </center>
   </body>
 </html>
