--- a/pu.html
+++ b/pu.html
@@ -45,7 +45,7 @@
 กลอนนี้สอนเรื่อง : ให้รู้จักระมัดระวังรอบคอบ รู้จักรักษาตัวให้พ้นจากภัยอันตราย เราไม่รู้เลยว่าใครคิดอย่างไรกับเรา การเรียนรู้ที่จะรับมือและเอาตัวรอดจึงเป็นสิ่งสำคัญ
                <br><br>
                   <center>
-                <font style="color:pink">จัดทำโดย ณัฐนันท์ ประเสริฐนิยม ม.202 เลขที่ 15
+                <font style="color:pink">จัดทำโดย ณัฐนันท์ ประเสริฐนิยม ม.202 เลขที่ 15</font>
   </center>
   </body>
 </html>
