--- a/asa.html
+++ b/asa.html
@@ -16,6 +16,7 @@
         onmouseout="this.src='https://hilight.kapook.com/img_cms2/user/KapookToday-AsalhaPujaDay_2.jpg';"
         width=250 height=250
         style="border : 5px solid green;">
+      <hr width=50% size=5 color=9527F5>
     </center>
   </body>
 </html>
