--- a/asa.html
+++ b/asa.html
@@ -52,6 +52,12 @@
         width=250 height=250
         style="border : 5px solid blue;">
     </center>
-
+<h1><mark>กิจกรรมวันอาสาฬหบูชา</mark></h1>\  
+<p>พิธีกรรมโดยทั่วไปที่นิยมกระทำในวันนี้ คือ การทำบุญ ตักบาตร รักษาศีล ฟังพระธรรมเทศนา และสวดมนต์ ในตอนค่ำก็จะมีการเวียนเทียนที่เป็นการสืบทอดประเพณีอันดีงามของไทยเรา ดังนั้น พุทธศาสนิกชนทั้งหลายควรเข้าวัด เพื่อน้อมระลึกถึงคุณพระรัตนตรัย อีกทั้งยังเป็นการช่วยชะล้างจิตใจให้ปลอดโปร่งผ่องใส จะได้มีร่างกายและจิตใจที่พร้อมสำหรับการดำเนินชีวิตในยุคที่ค่าครองชีพถีบตัวสูงขึ้นอย่างนี้...</p>
+  <center>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/jbCn5vtNZNA?si=7oSTmdfMQO7s7fso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </center>
+    <hr width=50% size=5 color=9527F5>
+    
   </body>
 </html>
