--- a/asa.html
+++ b/asa.html
@@ -59,6 +59,7 @@
   </center>
     <hr width=50% size=5 color=9527F5>
      <br><br>
+    <center>
         <img src="pic.jpg" width=350 height=250>
       <br><br>
       <b>ด.ช.ณัฐนันท์ ประเสริฐนิยม ห้อง202 เลขที่ 15</b>
