--- a/r10.html
+++ b/r10.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta-charset="utf-8>
+    <meta charset="utf-8>
       <title>วันเฉลิมพระชนมพรรษา</title>
       <style>
         mark{background-color:peach;
@@ -17,6 +17,8 @@
         width=300 height=300
         style=border:5px double pink;"
     </center>
+    <br><br>
+    <hr width=50% size=5 color=red> 
     <h1>พระราชประวัติสมเด็จพระเจ้าอยู่หัวรัชกาลที่ 10</h1>
   </body>
 </html>
