--- a/r10.html
+++ b/r10.html
@@ -5,7 +5,7 @@
       <style>
         mark{background-color:peach;
             color:green;}
-        p{text=indent:2em;}
+        p{text-indent:2em;}
       </style>
   </head>
   <body background="https://static.vecteezy.com/system/resources/thumbnails/032/502/373/small/yellow-honeycomb-pattern-seamless-geometric-hive-background-abstract-honeycomb-illustration-design-for-the-background-display-flyers-ad-honey-fabric-clothes-texture-textile-pattern-vector.jpg">
@@ -19,6 +19,8 @@
     </center>
     <br><br>
     <hr width=50% size=5 color=red> 
-    <h1>พระราชประวัติสมเด็จพระเจ้าอยู่หัวรัชกาลที่ 10</h1>
+    <h1><mark>พระราชประวัติสมเด็จพระเจ้าอยู่หัวรัชกาลที่ 10
+    <p>พระบาทสมเด็จพระวชิรเกล้าเจ้าอยู่หัวเป็นพระราชโอรสพระองค์เดียวในพระบาทสมเด็จพระมหาภูมิพลอดุลยเดชมหาราช บรมนาถบพิตร และสมเด็จพระนางเจ้าสิริกิติ์ พระบรมราชินีนาถ พระบรมราชชนนีพันปีหลวง เสด็จพระราชสมภพ ณ พระที่นั่งอัมพรสถาน พระราชวังดุสิต เมื่อวันจันทร์ที่ 28 กรกฎาคม พ.ศ. 2495 ได้รับพระราชทานพระนามว่า สมเด็จพระเจ้าลูกยาเธอ เจ้าฟ้าวชิราลงกรณ</p>
+</mark></h1>
   </body>
 </html>
