--- a/mom.html
+++ b/mom.html
@@ -6,7 +6,10 @@
 mark{background-color:skyblue;
 color:#73DAFF;}
 p{text-indent:2em;}
-
+.content{background-color:skyblue;
+        padding : 30px;
+        max-width:800px;
+        margin:auto;}
 
 </style>
 </head>
