--- a/mom.html
+++ b/mom.html
@@ -6,11 +6,10 @@
 mark{background-color:skyblue;
 color:#FFD6EE;}
 p{text-indent:2em;}
-.content{background-color:skyblue;
+.content{background-color:E78FFF;
         padding : 30px;
         max-width:800px;
         margin:auto;}
-
 </style>
 </head>
 <body background="https://i.ytimg.com/vi/L1noPwxDLhk/maxresdefault.jpg">
@@ -18,7 +17,11 @@ p{text-indent:2em;}
         <center>
         <h1><mark>วันแม่แห่งชาติ💙💙💙</mark></h1>
                 <h1><mark><marquee>ผมรักแม่ที่สุดในโลกนี้ 💖💕</marquee></mark></h1>
-        </center>
+        <br><br>
+        <video width="500" height="400" controls="controls">
+        <source src=".mp4">
+        </video>
+</center>
 </div>
 </body>
 </html>
