--- a/mom.html
+++ b/mom.html
@@ -19,7 +19,7 @@ p{text-indent:2em;}
                 <h1><mark><marquee>ผมรักแม่ที่สุดในโลกนี้ 💖💕</marquee></mark></h1>
         <br><br>
         <video width="500" height="400" controls="controls">
-        <source src=".mp4">
+        <source src="mom.mp4.mp4">
         </video>
 </center>
 </div>
