--- a/mom.html
+++ b/mom.html
@@ -23,9 +23,25 @@ p{text-indent:2em;}
         </video>
         <br><br>
         <h1><mark>สิ่งที่อย่างจะบอกแม่</mark></h1>
-        <img src="mom1.jpg" width=250 height=250
+        <img src="mom 1.jpg" width=250 height=250
         style="border:10px dotted blue;">
 </center>
+        <br><br>
+        <p> ผมรักแม่นะครับ ผมขอโทษถ้าเกิดผมทำอะไรไม่ถูกใจและจะเป็นลูกที่ดีของแม่นะครับ     
+        </p>
+        <center>
+                <img src="mom 2.jpg" width=250 height=250
+                style="border:10px dotted skyblue;">
+                <br>
+                <img src="mom 3.jpg" width=250 height=250
+                style="border:10px dotted yellow;">
+                <br>
+                <img src="mom 4.jpg" width=250 height=250
+                style="border:10px dotted pink;">
+                <br>
+                <img src="mom 5.jpg" width=250 height=250
+                style="border:10px dotted white;">
+        </center>
 </div>
 </body>
 </html>
