--- a/messi.html
+++ b/messi.html
@@ -6,7 +6,7 @@
 mark{background-color:5EB2FF;
 color:FFDF5E;}
 p{text-indent:2em;}
-.content{background-color:FF2E41;
+.content{background-color:FF707E;
         padding : 30px;
         max-width:800 px;
         margin:auto;}
@@ -14,7 +14,6 @@ p{text-indent:2em;}
   </head>
   <body background="https://upload.wikimedia.org/wikipedia/commons/1/1a/Flag_of_Argentina.svg="
     <div class="content">
-    </body>
     <center>
       <h1><mark>ลิโอเนล เมสซี่ — เรื่องราวที่น่าหลงใหล⚽</mark></h1>
       <h1><mark><marquee>จากเด็กชายต่างจังหวัดสู่หนึ่งในนักฟุตบอลที่ยิ่งใหญ่ที่สุด</marquee></mark></h1>
@@ -27,9 +26,11 @@ p{text-indent:2em;}
       <br>
       <hr width=80% color=purple>
       <br><br>
+    </center>
       <h1><mark>ประวัติย่อ</mark></h1>
       <p>ลิโอเนล เมสซี่ เกิดที่โรซาริโอ ประเทศอาร์เจนตินา ตั้งแต่ยังเด็กเขาแสดงพรสวรรค์ด้านฟุตบอลอย่างชัดเจน แม้จะมีอุปสรรคด้านร่างกายในวัยเยาว์ (ปัญหาการเจริญเติบโต) แต่ด้วยความพยายามและการสนับสนุนจากครอบครัว เขาเติบโตเป็นผู้เล่นที่ครบเครื่อง ทั้งการเลี้ยงบอล การจบสกอร์ และการอ่านเกม</p>
     <br><br>
+    <center>
       <h1><mark>ทีมที่เมสซี่เคยค้าแข้ง</mark></h1>
       <li>บาร์เซโลนา (FC Barcelona) – สเปน</li>
       <li>ปารีแซ็ง-แฌร์แม็ง (Paris Saint-Germain, PSG) – ฝรั่งเศส</li>
@@ -40,12 +41,17 @@ p{text-indent:2em;}
         <img src="https://intermediolan.com/img/news/4773-279700418.jpg" width=250 height=250
       style="border:10px double skyblue";>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRiQenYmGsRjvgM_dv2BDinL1-hFrSVEJ02Nc9BN2iuyb56-05Fl7nO9r3lsYxRQuD7YY&usqp=CAU" width=250 height=250
-          style="border:10px dotted white";>
+          style="border:10px double white";>
       <br><br>
+    </center>
       <h1><mark>สไตล์การเล่น</mark></h1>
       <p>เมสซี่ขึ้นชื่อเรื่องการเลี้ยงบอลชิดเท้า ความเร็วการเปลี่ยนทิศทางที่รวดเร็ว และการมองเห็นช่องว่างในแนวรับคู่แข่ง เขามักเล่นในบทบาทเพลย์เมคเกอร์หรือกองหน้าแบบอเนกประสงค์ — เป็นผู้สร้างโอกาสและคนยิงประตูในคราวเดียวกัน</p>
       <li>การเลี้ยงบอลแบบ "low center of gravity" — ควบคุมง่ายเมื่อหันตัว</li>
       <li>การส่งบอลแนวทะลุและการวางบอลหน้ากรอบเขตโทษ</li>
       <li>การจบสกอร์จากเท้าซ้ายที่แม่นยำทั้งกลางและจากระยะไกล</li>
-    </center>
-    </html>
+     <center>
+       <h1><mark>คำคมที่น่าสะท้อน</mark></h1>
+       “คุณต้องทำงานหนักเสมอ แม้ว่าคุณจะถูกวางคำว่า ‘พรสวรรค์’ ด้านหน้า”
+     </center>
+     </body>
+</html>
