--- a/messi.html
+++ b/messi.html
@@ -2,17 +2,17 @@
   <head>
     <meta charset="utf=8">
     <title>ประวัติของเมสซี่</title>
-    <style <style>
-mark{background-color:7DFA85;
-color:FFDF5E;}
+    <style>
+mark{background-color:#7DFA85;
+color:#FFDF5E;}
 p{text-indent:2em;}
-.content{background-color:FF707E;
+.content{background-color:#FF707E;
         padding : 30px;
         max-width:800px;
         margin:auto;}
   </style>
   </head>
-  <body background="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Flag_of_Argentina.svg/1200px-Flag_of_Argentina.svg.png"
+  <body background="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Flag_of_Argentina.svg/1200px-Flag_of_Argentina.svg.png">
   <div class="content">
     <center>
       <h1><mark>ลิโอเนล เมสซี่ — เรื่องราวที่น่าหลงใหล⚽</mark></h1>
