--- a/messi.html
+++ b/messi.html
@@ -54,13 +54,17 @@ p{text-indent:2em;}
        <br><br>
     <center>
        <h1><mark>ไฮไลท์การทำประตูของเมสซี่</mark></h1>
-       <iframe width="560" height="315"
-  src="https://www.youtube.com/embed/iHAyP0gI_AI"
-  title="Messi Dribbling Skills Evolution (2004–2019)"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen>
-</iframe>
+         <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/iHAyP0gI_AI"
+    title="Messi Dribbling Skills Evolution (2004–2019)"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
+
+  <p style="font-size:0.9em; color:#555;">
+    *คลิปนี้อยู่ภายใต้ลิขสิทธิ์ Creative Commons Attribution 3.0 (CC-BY 3.0)*
+  </p>
  <hr width=100% color=purple>
     </center>
   </div>
