--- a/jatu.html
+++ b/jatu.html
@@ -9,6 +9,9 @@
       body{font-family: "Mali", cursive;
   font-weight: 600;
   font-style: normal;}
+
+      mark{background:linear-gradient(Pastel Pink, Pale Blue, Pale Orange, Pale Green);
+          color:black;}
     </style>
   </head>
   <body background="https://www.wazzadu.com/thumbs/article/resize/760/article_5a1a5b40-2d15-11e8-bf20-f161deedc84d.jpg">
