--- a/jatu.html
+++ b/jatu.html
@@ -16,5 +16,7 @@
   </head>
   <body background="https://www.wazzadu.com/thumbs/article/resize/760/article_5a1a5b40-2d15-11e8-bf20-f161deedc84d.jpg">
     <h1><marquee><mark>ยินดีต้อนรับสู่เว็บไซต์ จตุรมิตร 4 เหล่า โรงเรียนสวนกุหลาบวิทยาลัย🌹 โรงเรียนเทพศิรินทร์🔰 โรงเรียนอัสสัมชัญ👕 โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 💜💛</mark></marquee></h1>
+    <br>
+    <button onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🌹</button>
   </body>
 </html>
