--- a/jatu.html
+++ b/jatu.html
@@ -12,6 +12,8 @@
 
       mark{background:linear-gradient(Pink,Blue,Orange,Green);
           color:black;}
+      button{background:linear-gradient(hotpink,blue);
+            color:blue;}
     </style>
   </head>
   <body background="https://www.wazzadu.com/thumbs/article/resize/760/article_5a1a5b40-2d15-11e8-bf20-f161deedc84d.jpg">
