--- a/jatu.html
+++ b/jatu.html
@@ -12,7 +12,7 @@
 
       mark{background:linear-gradient(Pink,Blue,Orange,Green);
           color:black;}
-      button{background:linear-gradient(hotpink,blue);
+      button1{background:linear-gradient(hotpink,skyblue);
             color:blue;}
     </style>
   </head>
