--- a/jatu.html
+++ b/jatu.html
@@ -14,17 +14,20 @@
           color:black;}
       button1{background:linear-gradient(hotpink,skyblue);
             color:blue;}
+      button2{background:linear-gradient(4BC942,F1FF61);
+            color:blue;}
+      button3{background:linear-gradient(red,white);
+            color:blue;}
+      button4{background:linear-gradient(DarkViolet,Gold);
+             color:blue;}
     </style>
   </head>
   <body background="https://www.wazzadu.com/thumbs/article/resize/760/article_5a1a5b40-2d15-11e8-bf20-f161deedc84d.jpg">
     <h1><marquee><mark>ยินดีต้อนรับสู่เว็บไซต์ จตุรมิตร 4 เหล่า โรงเรียนสวนกุหลาบวิทยาลัย🌹 โรงเรียนเทพศิรินทร์🔰 โรงเรียนอัสสัมชัญ👕 โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 💜💛</mark></marquee></h1>
     <br>
-    <button onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🌹</button>
-    <br>
-    <button onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์🔰</button>
-    <br>
-    <button onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ👕</button>
-    <br>
-    <button onclick="document.location=''">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย💜💛</button>
+    <button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🌹</button>
+    <button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์🔰</button>
+    <button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ👕</button>
+    <button4 onclick="document.location=''">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย💜💛</button>
   </body>
 </html>
