--- a/jatu.html
+++ b/jatu.html
@@ -14,7 +14,7 @@
           color:black;}
       button1{background:linear-gradient(hotpink,skyblue);
             color:blue;}
-      button2{background:linear-gradient(4BC942,F1FF61);
+      button2{background:linear-gradient(#228B22,Yellow);
             color:blue;}
       button3{background:linear-gradient(red,white);
             color:blue;}
