--- a/jatu.html
+++ b/jatu.html
@@ -32,11 +32,14 @@
     <br>
     <h2><button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย🌹</button1>
       &nbsp;&nbsp;&nbsp;
-    <button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์🔰</button2>.
+    <button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์🔰</button2>
       &nbsp;&nbsp;&nbsp;
     <button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ👕</button3>
       &nbsp;&nbsp;&nbsp;
     <button4 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย💜💛</button4>
       </header></h2>
+    <br><br>
+    <div id="menu" style="background:radial-gradient(hotpink,skyblue,limegreen,yellow,darkviolet,gold,red,#FFFFFF);
+      height:400px; width:200px; float:left;">
   </body>
 </html>
