--- a/jatu.html
+++ b/jatu.html
@@ -39,7 +39,7 @@
     <button4 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย💜💛</button4>
       </header></h2>
     <br><br>
-    <div id="menu" style="background:radial-gradient(hotpink,skyblue,limegreen,yellow,darkviolet,gold,red,#FFFFFF);height:400px; width:200px; float:left;">
+    <div id="menu" style="background:radial-gradient(hotpink,skyblue,limegreen,yellow);height:400px; width:200px; float:left;">
       <b>🔎สารบัญ⚽</b><br>
       💖 บทนำ<br>
       💖 ประวัติ<br>
