--- a/jatu.html
+++ b/jatu.html
@@ -41,12 +41,17 @@
     <br><br>
     <div id="menu" style="background:radial-gradient(hotpink,skyblue,limegreen,yellow);height:400px; width:200px; float:left;">
       <b>🔎สารบัญ⚽</b><br>
-      💖 บทนำ<br>
-      💖 ประวัติ<br>
-      💖 การแข่งขัน<br>
-      💖 อันดับแชมป์<br>
-      💖 จตุรมิตสามัคคีอาวุโส<br>
-      💖 ประเพณีชาวจตุรมิตร<br>
+      💖 บทนำ<br><br>
+      💖 ประวัติ<br><br>
+      💖 การแข่งขัน<br><br>
+      💖 อันดับแชมป์<br><br>
+      💖 จตุรมิตสามัคคีอาวุโส<br><br>
+      💖 ประเพณีชาวจตุรมิตร<br><br>
       😎ผู้จัดทำ
+    </div>
+
+    <center>
+      <img src="jatu.gif" width="700" height="400">
+    </center>
   </body>
 </html>
