--- a/jatu.html
+++ b/jatu.html
@@ -51,7 +51,7 @@
     </div>
 
     <center>
-      <img src="" width="700" height="400">
+      <img src="jatu.gif" width="700" height="400">
     </center>
   </body>
 </html>
