--- a/jatu.html
+++ b/jatu.html
@@ -9,7 +9,9 @@
       body{font-family: "Mali", cursive;
   font-weight: 600;
   font-style: normal;}
-
+      cursor:url("jatu.png"),auto;heigth:100vh;
+      </style>
+<style>
       mark{background:linear-gradient(Pink,Blue,Orange,Green);
           color:black;}
       button1{background:linear-gradient(hotpink,skyblue);
