--- a/jatu.html
+++ b/jatu.html
@@ -8,8 +8,8 @@
     <style>
       body{font-family: "Mali", cursive;
   font-weight: 600;
-  font-style: normal;}
-      cursor:url("jatu.png"),auto;heigth:100vh; 
+  font-style: normal;
+      cursor:url("jatu.png"),auto;heigth:100vh;} 
       </style>
 <style>
       mark{background:linear-gradient(Pink,Blue,Orange,Green);
