--- a/his.html
+++ b/his.html
@@ -95,13 +95,13 @@
 </p>
   <br><br>
   <center>
-    <span class=:"blink-bg:>ภาพบรรยากาศการแข่งขันฟุตบอลจตุรมิตรครั้งที่ 31</span>
+    <span class="blink-bg">ภาพบรรยากาศการแข่งขันฟุตบอลจตุรมิตรครั้งที่ 31</span>
     <br><br>
     <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/584637688_122187552296492775_1759849545552126261_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=umN88NjmLikQ7kNvwEGCCwF&_nc_oc=AdmiE5cnv_7eF9U_dfLwNufvUuw8I8UQ1aJNiVqXrxQs8qCePm7KpOAhMXAEQ9Cc0TM&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=JXaJ2snCgPXgX-cmCzHvUQ&oh=00_Afi0nRG-_h2VSBmVTfuFjcK5bS0J-H6ODFHNoJXOFXkKdw&oe=6932F5DC" width=250 height=250 class="zoom">
      <img src="https://cdni-hw.ch7.com/dm/sz-md/i/images/2025/11/23/692283a1658327.12675167.jpg" width=250 height=250 class="zoom">
      <img src="https://cdni-hw.ch7.com/dm/sz-md/i/images/2025/11/17/691b1831435f11.09445026.jpg" width=250 height=250 class="zoom">
      <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rpQjycFFrIF8t38NwY0g6Gq6CPbpU0zmZoF6MHOpLBD5g1ec4w.jpg" width=250 height=250 class="zoom">
-    <span class=:"blink-bg:>ภาพบรรยากาศการเชียร์และแปรอักษร</span>
+    <span class="blink-bg">ภาพบรรยากาศการเชียร์และแปรอักษร</span>
     <br><br>
     <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/583125184_1404945141636774_8438344476029357809_n.jpg?stp=dst-jpg_s590x590_tt6&_nc_cat=101&ccb=1-7&_nc_sid=833d8c&_nc_ohc=4XUAOs_L2BkQ7kNvwG-D_Yk&_nc_oc=AdkC60kLRHegjbOi4Yz_aULUnGQev1_uMLldUMStlHfpgN0HgGBbI-iOEh_7K8_y2cg&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=AAdC2VckatVDLpHgN8jvwg&oh=00_AfjWn-Nr3HuyToVIeiYBQQyeDLsBz1QuplOyx_nW5f5X_A&oe=6932D064" width=250 height=250 class="zoom">
      <img src=https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/588349064_1533412708262167_740911609391200779_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=127cfc&_nc_ohc=jGKcCc6GVnkQ7kNvwEmVuT5&_nc_oc=AdllGDv3NhghYB1qeBMffVm8mct63tcWGzVZz9Ho5m7m6QKXdxVumvqxQrVbXiEmH7o&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=HBrrHJZyGny8JonQpL3SyQ&oh=00_AfhXVXo_TK1KcLsFglKfoZuDSZDL5kr7OaHolQ8LBErKWA&oe=6932C4EA" width=250 height=250 class="zoom">
@@ -112,11 +112,11 @@
     background:linear-gradient(to right, limegreen,yellow,pink,skyblue,violet,gold,red,white);">
   <p>แม้ว่าความสามัคคีจะเป็นหัวใจสำคัญของการแข่งขันมาโดยตลอด (จตุรมิตร มาจากภาษาสันสกฤต จตุร + มิตร แปลว่า "สี่สหาย" และ สามัคคี (จากภาษาบาลีว่า สามัคคี) แปลว่า "ความกลมเกลียว" หรือ "ความกลมเกลียว") คำว่า จตุรมิตร มักถูกใช้เป็นวลีติดปากเพื่อเรียกนักเรียนหรือศิษย์เก่าของโรงเรียนที่เข้าร่วมโครงการทั้งสี่แห่ง การแข่งขันระหว่างโรงเรียนได้เพิ่มความรุนแรงขึ้น โดยเฉพาะอย่างยิ่งการแข่งขันทีมคู่ปรับระหว่างสวนกุหลาบวิทยาลัยกับเทพศิรินทร์ และอัสสัมชัญกับกรุงเทพคริสเตียนวิทยาลัย สิ่งนี้นำไปสู่ความรุนแรงระหว่างโรงเรียนหลายกรณีในช่วงหลายสัปดาห์ของการแข่งขัน ขอบเขตของปัญหาคือต้องมีการแยกผู้ชมอย่างเข้มงวดและการบังคับใช้ความปลอดภัยในระหว่างการแข่งขัน</p>
 <br><br>
-    <span class=:"blink-bg:>ผลการแข่งขันฟุตบอลจตุรมิตร 31</span>
+    <span class="blink-bg">ผลการแข่งขันฟุตบอลจตุรมิตร 31</span>
     <br><br>
     <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/582530387_1861166777864138_2030555187530355197_n.jpg?stp=dst-jpg_s640x640_tt6&_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=wmsqmL9oFa4Q7kNvwEBSXwU&_nc_oc=Adnu1aEWoFr2URBDk6auuvx08HSDibiHFsTXyh0XTGhALivlc-UlcKs1oL6CTmZq3Zs&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=NHAK52mRkO9-fRjUOCcQnw&oh=00_AfgxvbJO_LYf2-7rftVZl3_gCw7No5rUdXvvC1Zr2pdz1w&oe=6932CD75" width=250 height=250 class="zoom">
      <br><br>
-    <span class=:"blink-bg:>คลิปวันจตุรมิตร 31</span>
+    <span class="blink-bg">คลิปวันจตุรมิตร 31</span>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/GCEuThpjQH0?si=ehC05azqknUXCxin" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RjwLGfJ_pf8?si=sfoWKaPFDO_q7nzV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/eLUA5xw6qkg?si=oqi26AzFYQfMHwMb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
